# NeuronSdfViewer

./: .gitignore  CMakeLists.txt  README.md
assets/: 228-1-NBSS.CNG.swc
lib/glad/include/: vk_platform.h
lib/glad/include/glad/: vulkan.h
lib/glad/src/: vulkan.c
modules/neuron/: NeuronScene.ixx  NeuronViewer.ixx  SwcLoader.ixx  SwcNode.ixx
modules/render/: Camera.ixx  Intersect.ixx  Object.ixx  Ray.ixx  Render.ixx  Scene.ixx
modules/render/accelerate/: BVH.ixx  Bound3.ixx  Bound3Intersect.ixx
modules/render/basis/: Accelerate.ixx  Camera.ixx  Intersect.ixx  Object.ixx  Ray.ixx  Render.ixx  Scene.ixx
modules/render/cameras/: Camera.ixx  OrthographicCamera.ixx  PerspectiveCamera.ixx
modules/render/objects/: SdfCombinedObject.ixx  SdfObject.ixx  SdfRoundCone.ixx  SdfSphere.ixx
modules/utils/: debug.ixx  partion.ixx
modules/world/objects/: Object.ixx  SdfCombinedObject.ixx  SdfObject.ixx  SdfRoundCone.ixx  SdfSphere.ixx
src/: Object.hpp  Rasterizer.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  SdfSphere.cpp  SdfSphere.hpp  Viewer.cpp  Viewer.hpp  main.cpp
src/neuron/: NeuronScene.cpp  NeuronScene.hpp  NeuronViewer.cpp  NeuronViewer.hpp  SwcLoader.cpp  SwcLoader.hpp  SwcNode.cpp  SwcNode.hpp  SwcPoint.cpp  SwcPoint.hpp
src/object/: Object.hpp  SdfObject.cpp  SdfObject.hpp  SdfSphere.cpp  SdfSphere.hpp
src/render/: Intersect.cpp  Intersect.hpp  Rasterizer.cpp  Ray.cpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp
src/render/accelerate/: Accelerate.hpp  BVH.cpp  BVH.hpp  Bound3.cpp  Bound3.hpp  Bound3Intersect.cpp  Bound3Intersect.hpp
src/render/camera/: Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/render/material/: Material.hpp  MaterialBase.hpp  MaterialDiffuse.hpp
src/render/material/light/: MaterialLight.hpp  MaterialLightArea.hpp
src/render/object/: Object.hpp  SdfCombinedObject.cpp  SdfCombinedObject.hpp  SdfObject.cpp  SdfObject.hpp  SdfRoundCone.cpp  SdfRoundCone.hpp  SdfSphere.cpp  SdfSphere.hpp
src/swc/: SwcLoader.cpp  SwcLoader.hpp
src/utils/: debug.cpp  debug.hpp  partion.hpp  random.hpp
